--- a/index.html
+++ b/index.html
@@ -4,70 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sultana's Kitchen</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-image: url('a1d99a15-0fcd-4ec0-8fb3-dfa36086e86a.png'); /* your uploaded picture */
-            background-size: 100%;
-            background-position: center;
-            background-repeat: no-repeat;
-            font-family: Franklin Gothic, sans-serif;
-        }
-
-        /* Top headline */
-        .headline {
-            position: absolute;
-            top: 20px;
-            text-align: center;
-            font-size: 2.5rem;
-            font-weight: bold;
-            color: black; /* Title in black */
-            text-shadow: 1px 1px 2px rgba(255,255,255,0.5); /* optional subtle shadow for visibility */
-        }
-
-        /* Links container */
-        .links {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 20px; /* space between links */
-        }
-
-        /* Link style */
-        .social-link {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            text-decoration: none;
-            font-size: 2rem;
-            font-weight: bold;
-            transition: transform 0.3s;
-        }
-
-        .social-link img {
-            width: 80px;
-            height: 80px;
-        }
-
-        .social-link:hover {
-            transform: scale(1.05);
-        }
-
-        /* Specific colors for links */
-        .facebook-link {
-            color: #1877F2; /* Facebook blue */
-        }
-
-        .instagram-link {
-            color: #C13584; /* Instagram gradient-ish main pink/magenta */
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="headline">WELCOME TO THE WEBSITE OF SULTANA'S KITCHEN</div>
@@ -82,8 +19,9 @@
         <!-- Instagram Link -->
         <a href="https://www.instagram.com/umme_masusa_sultana/" target="_blank" class="social-link instagram-link">
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram Logo">
-            Umme Masuma Sultana
+            Umme Masuma Mukta
         </a>
     </div>
 </body>
 </html>
+
