--- a/index.html
+++ b/index.html
@@ -82,9 +82,10 @@
         <!-- Instagram Link -->
         <a href="https://www.instagram.com/umme_masusa_sultana/" target="_blank" class="social-link instagram-link">
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram Logo">
-            Umme Masuma Sultana
+            Umme Masuma Mukta
         </a>
     </div>
 </body>
 </html>
+
 
