--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             text-align: center;
             font-size: 2.5rem;
             font-weight: bold;
-            color: black;
+            color: #DBB235;
             text-shadow: 1px 1px 2px rgba(255,255,255,0.5);
         }
 
@@ -87,5 +87,6 @@
     </div>
 </body>
 </html>
+
 
 
